be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be42-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be42
  template:
    metadata:
      labels:
        app: be42
    spec:
      dnsPolicy: Default
      dnsConfig:
        nameservers:
          - 8.8.8.8
      containers:
        - name: be42
          image: 15.164.102.222:1588/return/be
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
