fe-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe42-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fe42
  template:
    metadata:
      labels:
        app: fe42
    spec:
      dnsPolicy: Default
      dnsConfig:
        nameservers:
          - 8.8.8.8
      containers:
        - name: fe42
          image: 15.164.102.222:1588/return/fe
          imagePullPolicy: Always
          ports:
            - containerPort: 80
