mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deploy
spec:
  selector:
    matchLabels:
      service: mariadb
  template:
    metadata:
      labels:
        service: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11.2
          ports:
            - containerPort: 3333
              protocol: TCP
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          hostPath:
            path: /data/mariadb
