be-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: be42-service
spec:
  ports:
    - name: be-port
      port: 8080
      targetPort: 31001
      protocol: TCP
  selector:
    service: be42
