fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe42-service
  labels:
    app: fe42
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: fe42
