lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb42-service
  labels:
    app: lb42
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31000
  selector:
    app: lb42
