mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: mariadb
spec:
  type: nodePort
  ports:
    - port: 3333
      protocol: TCP
  selector:
    app: mariadb
