redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - name: redis-port
      port: 6666
      targetPort: 31003
      protocol: TCP
  selector:
    service: redis
