ingress-42.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: people-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  tls:
    - hosts:
      - kube.people42.com
      secretName: my-tls-secret
  rules:
  - host: kube.people42.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe42-svc
            port:
              number: 31000
      - path: /be42/
        pathType: Prefix
        backend:
          service:
            name: be42-svc
            port:
              number: 31001
      - path: /redis/
        pathType: Prefix
        backend:
          service:
            name: redis-svc
            port:
              number: 31002
      - path: /mariadb/
        pathType: Prefix
        backend:
          service:
            name: mariadb-svc
            port:
              number: 31003
